# soundbites

./: .env  .gitignore  .prettierrc  README.md  file.json  index.js  package-lock.json  package.json  sample.md  tsconfig.json
api/: Cargo.toml
api/migrations/2022-06-07-163200_users/: up.sql
api/src/: db.rs  main.rs  models.rs
assets/: 404.css  common.css  index.css  maincss.js
assets/js/: comment.js  common.js  create.js  login.js  register.js  settings.js  theme_toggle.js
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  Navbar.tsx  index.tsx
client/src/pages/: About.tsx  Home.tsx
prisma/: schema.prisma
prisma/migrations/20230826160723_initial/: migration.sql
server/: .env  auth.ts  auth_utils.js  database.js  date_assembly.js  date_assembly.ts  env.ts  get_posts.js  get_posts.ts  index.js  index.ts  types.ts  utils.ts
server/middleware/: log_requests.js  log_requests.ts
server/models/: article.js  comment_model.js  comment_model.ts  post_model.js  post_model.ts  user_model.js  user_model.ts
server/routes/: account_router.js  account_router.ts  post_router.js  post_router.ts  user_router.js  user_router.ts
server/src/: routes.rs
src/: index.js
src/pages/: index.html
views/: 404.ejs  about.ejs  create.ejs  featured.ejs  index.ejs  login.ejs  post.ejs  posts.ejs  profile.ejs  register.ejs  settings.ejs  template.ejs  user.ejs
views/common/: latest-headlines.ejs  navbar.ejs  theme_toggle.ejs  user_details.ejs
website/: .prettierrc  astro.config.ts  package-lock.json  package.json  tsconfig.json
(+27 files in other folders)
