[package]
name = "soundbites-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.8", features = ["postgres"]}
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.11"
rocket_codegen = "0.4.11"
rocket_contrib = { version = "0.4.11", default-features = false, features = ["json"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
